--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
 <script type="text/javascript" src="{{ url_for('static', filename='jquery-ui.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='point.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='accuracy.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='throughput.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='blurry.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='reveal.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='vanilla.js') }}"></script>
